fix(test): correct ExchangeRateServiceTest stub sequencing and lenient strictness